--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,58 @@
+*.class
+*.log
+/bin
+/logs
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+
+# Eclipse #
+.classpath
+.project
+.externalToolBuilders/
+.metadata
+.settings
+.myeclipse
+
+
+# Maven #
+/target/
+
+# BlueJ files
+*.ctxt
+
+# IntelliJ #
+*.iml
+*.ipr
+*.iws
+.idea
+/out/
+
+
+# NetBeans #
+nbproject
+build
+build.xml
+manifest.mf
+
+# Mac #
+.DS_Store
+._*
+
+# OIM #
+/Config/
+/DB/
+/Temp/*
+
 # Compiled class file
 *.class
 
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
